--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,15 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
-redis.maxIdle=100
-redis.maxTotal=300
-redis.maxWait=10000
-redis.testOnBorrow=true
-redis.timeout=100000
+#redis.maxIdle=100
+spring.redis.jedis.pool.max-idle=100
+spring.redis.jedis.pool.max-active=100
+spring.redis.jedis.pool.max-wait=10000
+spring.redis.timeout=100000
+#redis.maxTotal=300
+#redis.maxWait=10000
+#redis.testOnBorrow=true
+#redis.timeout=100000
 # \u9650\u6D41
 redis.limit=5
 
