--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 # \u65E5\u5FD7
-logging.file=secondkill.log
+#logging.file.name=secondkill.log
 logging.level.root=info
 
 # \u6570\u636E\u5E93
